Delete dead code and restructure language emptiness check.